# notes-frontend

./: .env  .gitignore
backend/: Cargo.toml
backend/src/: db.rs  main.rs
backend/src/models/: notes.rs
backend/src/routes/: note.rs
frontend/frontend/: .env
frontend/frontend/src/: App.css  App.jsx
