[package]
name = "backend"
version = "0.1.0"
edition = "2021"  # ← CHANGE FROM "2024" to "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
hyper = "1.7.0"
tower-http = { version = "0.6.6", features = ["cors"] }

